# trinity-devices-controller

./: .gitmodules  .mxproject  CMakeLists.txt  README.md  STM32G431XX_FLASH.ld  trinity-devices-controller.ioc
Core/Inc/: main.h  stm32g4xx_it.h
Core/Src/: fdcan.c  gpio.c  main.c  stm32g4xx_it.c  tim.c  usart.c
app/: CMakeLists.txt
app/include/app/: app.hpp  driver_stm32_fdcan.hpp
app/src/: app.cpp  driver_stm32_fdcan.cpp
cmake/stm32cubemx/: CMakeLists.txt
trinity-devices-controller/: trinity-devices-controller.kicad_pcb  trinity-devices-controller.kicad_prl  trinity-devices-controller.kicad_pro  trinity-devices-controller.kicad_sch  ~trinity-devices-controller.kicad_pro.lck  ~trinity-devices-controller.kicad_sch.lck
trinity-devices-controller/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
